# luaEngine

./: README  settings.gradle
androidlua/: CMakeLists.txt  build.gradle
androidlua/src/main/jni/: Application.mk
androidlua/src/main/jni/android/: ldoinput.c  ldoinput.h  ldroidlib.c  ldroidlib.h  lshellcmd.c  lshellcmd.h
androidlua/src/main/jni/lua/: linit.c  luaconf.h  lualib.h
androidlua/src/main/jni/luajava/: luajava.c
app/: build.gradle
app/src/androidTest/java/com/tools/luaengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.lua
app/src/main/java/com/tools/luaengine/: MainActivity.java  TestJavaFunction.java
app/src/main/java/com/tools/utils/: SystemUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tools/luaengine/: ExampleUnitTest.java
eventinjector/: CMakeLists.txt  build.gradle
eventinjector/src/androidTest/java/com/tapmacro/eventinjector/: ExampleInstrumentedTest.java
eventinjector/src/main/: AndroidManifest.xml
eventinjector/src/main/cpp/: EventInjector.cpp  EventInjector.h  native-lib.cpp
eventinjector/src/main/java/com/tapmacro/eventinjector/: EventInjector.java  MainActivity.java
eventinjector/src/main/res/layout/: content_main.xml
eventinjector/src/main/res/menu/: menu_main.xml
eventinjector/src/main/res/values/: strings.xml
eventinjector/src/test/java/com/tapmacro/eventinjector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
